--- a/public/web/css/style.css
+++ b/public/web/css/style.css
@@ -1866,7 +1866,7 @@ img.pp-img {
 }
 
 a.btn.btn-primary {
-    background-color: #3a5795;
+    background-color: #31dbac;
     font-family: 'Open Sans', sans-serif;
     color: #fff;
     border: none;
