--- a/public/layout_admin/css/style.css
+++ b/public/layout_admin/css/style.css
@@ -68,6 +68,9 @@ body a{
   color: #fff;
   height: 32px;
 }
+.tai .dropdown-menu{
+  
+}
 .navbar .navbar-nav li .dropdown-menu {
   margin-top: 3px;
   border: none;
@@ -90,6 +93,8 @@ body a{
   border-left: 8px solid transparent;
   content: '';
 }
+.icon{ font-size:25px; color:green; }
+.icon2{ font-size:25px; color:red; }
 .navbar .navbar-nav li .dropdown-menu li.dropdown-menu-header, .navbar .navbar-nav li .dropdown-menu li.dropdown-menu-footer {
   background:#f2f4f8;
 }
