--- a/public/web/css/bootstrap.css
+++ b/public/web/css/bootstrap.css
@@ -3170,7 +3170,7 @@ tbody.collapse.show {
   border: 1px solid rgba(0, 0, 0, 0.15);
   border-radius: 0.25rem;
   width: 231px;
-  background: pink;
+  /* background: pink; */
   padding: 5px 3px;
 }
 
