thuộc tính sản phẩm

--- a/public/layout_admin/css/style.css
+++ b/public/layout_admin/css/style.css
@@ -97,6 +97,10 @@ a.cach {
     padding: 10px 17px;
     border-radius: 7px;*/
 }
+.mau{
+  width: 100px;
+  height: 100px;
+}
 a{
   text-decoration: none;
 }
