--- a/public/web/css/bootstrap.css
+++ b/public/web/css/bootstrap.css
@@ -6143,7 +6143,7 @@ button.bg-danger:focus {
 }
 
 .bg-light {
-  background-color: #f6a9e9 !important;
+  /* background-color: #f6a9e9 !important; */
 }
 
 a.bg-light:hover, a.bg-light:focus,
