--- a/public/web/css/bootstrap.css
+++ b/public/web/css/bootstrap.css
@@ -6144,6 +6144,7 @@ button.bg-danger:focus {
 
 .bg-light {
   /* background-color: #f6a9e9 !important; */
+  padding: 0;
 }
 
 a.bg-light:hover, a.bg-light:focus,
