binh luận client
bình luận client

--- a/public/web/css/style.css
+++ b/public/web/css/style.css
@@ -76,6 +76,8 @@ body a {
 .mm-menu_opened{display:block!important;}
 .transition{-webkit-transition:0.3s ease-out;-moz-transition:0.3s ease-out;-o-transition:0.3s ease-out;transition:0.3s ease-out;}
 
+
+
 .bao_card{
     
 }
@@ -87,48 +89,6 @@ body a {
 }
 .bao_detail{
     background: white;
-}
-.baiviet-title{
-    
-}
-.left1{
-    margin-bottom: 20px;
-}
-.flex{
-    display: flex;
-    margin-bottom: 20px;
-}
-.title_baiviet {
-    color: red;
-    font-family: monospace;
-    font-size: 19px;
-    text-transform: uppercase;
-}
-a.btn.btn-default.btn-sm.xem {
-    background: #fffffff0;
-    border: 1px solid grey;
-    border-radius: none;
-}
-.giohang{
-    
-}
-.btn-sm{
-    color: #e65252;
-}
-li .dau{
-
-}
-.content{
-    margin-left:30px;
-    width: 80%;
-
-}
-.pro_img {
-    height: 277px;
-    width: 205px;
-}
-.baiviet_xemthem{
-    color: black;
 }
 .cart-tab { 
   width: 22em;
@@ -284,18 +244,13 @@ p {
     letter-spacing: 1px;
     font-size: 15px;
     line-height: 1.9;
-    /* color: #999; */
-    font-family: 'Lato';
+    color: #999;
+    font-family: 'Open Sans', sans-serif;
 }
-.ads-grid.py-sm-5.py-4 {
-    background: #e8e8e8f7;
-}
+
 ul {
     margin: 0;
     padding: 0;
-}
-.footer-top-first {
-    background: #e8e8e8f7;
 }
 .sapxep{
     margin-bottom: 20px;
@@ -700,9 +655,8 @@ input[type="submit"] {
     border: 1px solid #80808047;
 }
 nav.flex.items-center.justify-between {
-    /* text-align: center; */
+    text-align: center;
     margin-top:40px;
-    justify-content: center;
 }
 .flex.justify-between.flex-1.sm\:hidden{
     display: none;
@@ -915,9 +869,8 @@ ul.multi-column-dropdown li a:hover {
 /*-- heading style --*/
 
 h3.tittle-w3l {
-    color: #ec1c1cb0;
+    color: #000;
     font-size: 38px;
-    font-family: revert;
     letter-spacing: 1px;
     text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.19);
 }
@@ -1396,10 +1349,6 @@ h3.agileits-sear-head {
     background-color: mistyrose;
     height: fit-content;
     border-radius: 26px;
-    box-shadow: 5px 1px 12px grey;
-}
-.taichodien{
-    height: 500px;
 }
 
 /*-- price --*/
@@ -1520,14 +1469,11 @@ span.item_price {
 
 .product-sec1.product-sec2 {
     background: #F45C5D;
-    background: url('../images/y1.jpg')no-repeat;
     position: relative;
-    background-size: cover;
-    height: 300px;
 }
 
 h3.effect-bg {
-    color: #350202b3;
+    color: #fff;
     font-size: 45px;
     letter-spacing: 3px;
     font-weight: 600;
