--- a/public/web/css/style.css
+++ b/public/web/css/style.css
@@ -26,6 +26,32 @@ body a {
 
 
 
+.wrap-intro{margin-bottom:50px;}
+.left-intro{width:67%;}
+.right-intro{width:30%;}
+.title-intro{border-bottom:1px solid var(--color-red);margin-bottom:1.5rem;}
+.title-intro span{display:inline-block;font-weight:700;text-transform:uppercase;position:relative;padding-bottom:10px;font-size:20px;}
+.title-intro span:after{content:"";position:absolute;width:100%;height:4px;bottom:0px;left:0px;background-color:var(--color-red);}
+.newshome-best{width:43%;display:block;float:left;margin-right:1.5%;}
+.pic-newshome-best img{width:100%;}
+.name-newshome{color:var(--color-black);font-size:14px;line-height:18px;margin-bottom:0.25rem;}
+.name-newshome:hover{color: #f00;}
+.name-newshome.text-split{-webkit-line-clamp:2;}
+.time-newshome{color:var(--color-gray);margin-bottom:0.25rem;}
+.desc-newshome{color:var(--color-black);margin-bottom:0px;}
+.view-newshome{display:inline-block;border:1px solid var(--color-black);padding:8px 15px;color:var(--color-black);text-transform:capitalize;font-weight:600;margin-top:1rem;}
+.view-newshome:hover{background-color:var(--color-black);color:#fff;}
+.newshome-scroll{width:calc(100% - 44.5%);height:450px;overflow:hidden;}
+.newshome-scroll ul li{margin-bottom:15px!important;}
+.newshome-normal{display:block;}
+.pic-newshome-normal{float:left;width:34%;margin-right:3%;margin-bottom:0px;}
+.pic-newshome-normal img{width:100%;}
+.info-newshome-normal{float:left;width:calc(100% - 37%);}
+.video-main{position:relative;height:400px;}
+.video-main iframe{position:absolute;width:100%;height:100%;top:0px;left:0px;}
+.listvideos{width:100%;height:40px;padding:0px 10px;border:1px solid #ccc;color:var(--color-black);margin-top:10px;cursor:pointer;}
+
+
 
 
 
@@ -43,15 +69,16 @@ body a {
 .menu ul li{position:relative;z-index:99;}
 .menu ul li.line{width:1px;height:15px;background-color:rgba(255,255,255,0.5);}
 .menu ul li a{display:block;position:relative;z-index:1;text-align:center;text-decoration:none!important;}
-.menu ul li a h2{font-size:14px;color:#5c4b4b;margin:0px;padding: 17px 8px;text-transform:uppercase;}
-.menu ul li a.active,.menu ul li:hover > a{background:grey;}
+.menu ul li a h2{font-size:14px;color: #f05c5c;margin:0px;padding: 17px 8px;text-transform:uppercase;}
+.menu ul li a.active,.menu ul li:hover > a{background:pink;}
 .menu ul li ul{position:absolute;min-width:200px;background:white;box-shadow:0 3px 11px 0 rgba(0,0,0,0.1);-webkit-transform:perspective(600px) rotateX(-90deg);transform:perspective(600px) rotateX(-90deg);-webkit-transform-origin:0 0 0;transform-origin:0 0 0;opacity:0;visibility:hidden;transition:all .5s;}
 .menu ul li:hover > ul{-webkit-transform:perspective(600px) rotateX(0);transform:perspective(600px) rotateX(0);-webkit-transform-origin:0 0 0;opacity:1;visibility:visible;transition:all .7s;color: red;}
 .menu ul li ul li a {
     text-align: left;
     border-bottom: 1px solid #8b7e7e38;
-    color: black;
+    color: #f05c5c;
     padding: 10px 10px;
+    text-transform: uppercase;
 }
 .menu ul li ul li:last-child > a{border-bottom:0px;}
 .menu ul li ul li a h2{font-size:14px;padding:12px 15px;}
@@ -76,8 +103,6 @@ body a {
 .mm-menu_opened{display:block!important;}
 .transition{-webkit-transition:0.3s ease-out;-moz-transition:0.3s ease-out;-o-transition:0.3s ease-out;transition:0.3s ease-out;}
 
-
-
 .bao_card{
     
 }
@@ -89,6 +114,111 @@ body a {
 }
 .bao_detail{
     background: white;
+}
+.baiviet-title{
+    
+}
+.wrap-1200{
+    max-width: 1200px;
+    margin: auto;
+}
+.taicho{
+    padding-top: 50px;
+}
+.product-men.mt-5.wid {
+    width: 33.33%;
+}
+
+h2.title{
+    margin-top: 80px;
+    margin-bottom: 80px;
+}
+.left1{
+    margin-bottom: 20px;
+}
+.flex{
+    display: flex;
+    margin-bottom: 20px;
+}
+.title_baiviet {
+    color: red;
+    font-family: monospace;
+    font-size: 19px;
+    text-transform: uppercase;
+}
+a.btn.btn-default.btn-sm.xem {
+    background: #fffffff0;
+    border: 1px solid grey;
+    border-radius: none;
+}
+.style_comment{
+    display: flex;
+    justify-content: space-between;
+}
+
+.rep{
+   background: #80808054;
+    border-radius: 11px;
+  
+}
+.phai{
+   /* margin-right: 20px;*/
+}
+.back{
+    background: white;
+    margin: 10px 0;
+}
+.giohang{
+    
+}
+.btn-sm{
+    color: #e65252;
+}
+li .dau{
+
+}
+.content{
+    margin-left:30px;
+    width: 80%;
+
+}
+.trang{
+    background: white;
+}
+.nen {
+    background: wheat;
+    padding: 20px;
+    border-radius: 28px;
+}
+.comment-form {
+    border: 1px solid #cbbfbf;
+    padding: 30px;
+    background: powderblue;
+}
+.comment_content{
+    width: 100%;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-radius: 5px;
+
+}
+.comment_name{
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-color: grey;
+    margin-bottom: 20px ;
+    border-radius: 3px;
+}
+
+
+.pro_img {
+    height: 277px;
+    width: 205px;
+}
+.baiviet_xemthem{
+    color: black;
 }
 .cart-tab { 
   width: 22em;
@@ -244,13 +374,21 @@ p {
     letter-spacing: 1px;
     font-size: 15px;
     line-height: 1.9;
-    color: #999;
-    font-family: 'Open Sans', sans-serif;
+    /* color: #999; */
+    font-family: 'Lato';
 }
-
+.ads-grid.py-sm-5.py-4 {
+    background: #e8e8e8f7;
+}
 ul {
     margin: 0;
     padding: 0;
+}
+.sellchay1 {
+    padding-top: 90px;
+    }
+.footer-top-first {
+    background: #e8e8e8f7;
 }
 .sapxep{
     margin-bottom: 20px;
@@ -358,7 +496,9 @@ span.giohang {
 /*-- top-header --*/
 
 .main-top-w3l {
-    background: #ee7373;
+    /*background: #ee7373;*/
+    background: url('../images/header.png') no-repeat;
+    background-size: cover;
 }
 
 .header-most-top p {
@@ -655,8 +795,9 @@ input[type="submit"] {
     border: 1px solid #80808047;
 }
 nav.flex.items-center.justify-between {
-    text-align: center;
+    /* text-align: center; */
     margin-top:40px;
+    justify-content: center;
 }
 .flex.justify-between.flex-1.sm\:hidden{
     display: none;
@@ -687,8 +828,8 @@ button.w3view-cart {
 /*-- navigation --*/
 
 .navbar-inner {
-    background: #e7e7e7;
     box-shadow: 0px 2px 6px 1px rgba(0, 0, 0, 0.13);
+    background: mistyrose;
 }
 
 .navbar-light .navbar-nav .nav-link {
@@ -869,8 +1010,9 @@ ul.multi-column-dropdown li a:hover {
 /*-- heading style --*/
 
 h3.tittle-w3l {
-    color: #000;
+    color: #ec1c1cb0;
     font-size: 38px;
+    font-family: revert;
     letter-spacing: 1px;
     text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.19);
 }
@@ -1349,6 +1491,10 @@ h3.agileits-sear-head {
     background-color: mistyrose;
     height: fit-content;
     border-radius: 26px;
+    box-shadow: 5px 1px 12px grey;
+}
+.taichodien{
+    height: 500px;
 }
 
 /*-- price --*/
@@ -1441,7 +1587,9 @@ a.price-mar {
     background: #f5eee9;
     border-radius: 27px;
 }
-
+.quangcao{
+    padding-top: 50px;
+}
 h3.heading-tittle {
     color: #000;
     font-size: 32px;
@@ -1467,13 +1615,23 @@ span.item_price {
     font-size: 15px;
 }
 
-.product-sec1.product-sec2 {
+/*.product-sec1.product-sec2 {
     background: #F45C5D;
+    background: url('../images/y1.jpg')no-repeat;
     position: relative;
+    background-size: cover;
+    height: 300px;
+}*/
+.wrap_1200{
+    width: 1110px;
+    margin: auto;
 }
-
+.hinh{
+    width: 1200px;
+    height: 354px;
+}
 h3.effect-bg {
-    color: #fff;
+    color: #350202b3;
     font-size: 45px;
     letter-spacing: 3px;
     font-weight: 600;
@@ -2918,6 +3076,7 @@ div#testimonials h4.m-title {
     .carousel-item.item1 {
         min-height: 430px;
     }
+    
     h3.tittle-w3l {
         font-size: 36px;
     }
