--- a/public/layout_admin/css/style.css
+++ b/public/layout_admin/css/style.css
@@ -68,6 +68,12 @@ body a{
   color: #fff;
   height: 32px;
 }
+.cot_12{
+  width: 100%;
+}
+.row .giua{
+  text-align: center;
+}
 a.cach {
     margin: 0 10px;
     width: 33.33%;
@@ -83,6 +89,29 @@ tbody tr td{
 thead tr th{
   text-transform: uppercase;
  
+}
+.chitietdh{
+
+}
+.baochitiet{
+  padding: 20px 20px;
+}
+.left-table{
+  width: 35%;
+}
+.right-table{
+  width: 60%;
+}
+.baobang{
+  display: flex;
+  margin-top: 50px;
+  justify-content: space-around;
+}
+.viet{
+
+}
+.pham{
+  
 }
 .pos {
     position: absolute;
