--- a/public/web/css/style.css
+++ b/public/web/css/style.css
@@ -26,6 +26,32 @@ body a {
 
 
 
+.wrap-intro{margin-bottom:50px;}
+.left-intro{width:67%;}
+.right-intro{width:30%;}
+.title-intro{border-bottom:1px solid var(--color-red);margin-bottom:1.5rem;}
+.title-intro span{display:inline-block;font-weight:700;text-transform:uppercase;position:relative;padding-bottom:10px;font-size:20px;}
+.title-intro span:after{content:"";position:absolute;width:100%;height:4px;bottom:0px;left:0px;background-color:var(--color-red);}
+.newshome-best{width:43%;display:block;float:left;margin-right:1.5%;}
+.pic-newshome-best img{width:100%;}
+.name-newshome{color:var(--color-black);font-size:14px;line-height:18px;margin-bottom:0.25rem;}
+.name-newshome:hover{color: #f00;}
+.name-newshome.text-split{-webkit-line-clamp:2;}
+.time-newshome{color:var(--color-gray);margin-bottom:0.25rem;}
+.desc-newshome{color:var(--color-black);margin-bottom:0px;}
+.view-newshome{display:inline-block;border:1px solid var(--color-black);padding:8px 15px;color:var(--color-black);text-transform:capitalize;font-weight:600;margin-top:1rem;}
+.view-newshome:hover{background-color:var(--color-black);color:#fff;}
+.newshome-scroll{width:calc(100% - 44.5%);height:450px;overflow:hidden;}
+.newshome-scroll ul li{margin-bottom:15px!important;}
+.newshome-normal{display:block;}
+.pic-newshome-normal{float:left;width:34%;margin-right:3%;margin-bottom:0px;}
+.pic-newshome-normal img{width:100%;}
+.info-newshome-normal{float:left;width:calc(100% - 37%);}
+.video-main{position:relative;height:400px;}
+.video-main iframe{position:absolute;width:100%;height:100%;top:0px;left:0px;}
+.listvideos{width:100%;height:40px;padding:0px 10px;border:1px solid #ccc;color:var(--color-black);margin-top:10px;cursor:pointer;}
+
+
 
 
 
@@ -99,6 +125,10 @@ body a {
 .taicho{
     padding-top: 50px;
 }
+.product-men.mt-5.wid {
+    width: 33.33%;
+}
+
 h2.title{
     margin-top: 80px;
     margin-bottom: 80px;
@@ -121,6 +151,23 @@ a.btn.btn-default.btn-sm.xem {
     border: 1px solid grey;
     border-radius: none;
 }
+.style_comment{
+    display: flex;
+    justify-content: space-between;
+}
+
+.rep{
+   background: #80808054;
+    border-radius: 11px;
+  
+}
+.phai{
+   /* margin-right: 20px;*/
+}
+.back{
+    background: white;
+    margin: 10px 0;
+}
 .giohang{
     
 }
@@ -135,6 +182,37 @@ li .dau{
     width: 80%;
 
 }
+.trang{
+    background: white;
+}
+.nen {
+    background: wheat;
+    padding: 20px;
+    border-radius: 28px;
+}
+.comment-form {
+    border: 1px solid #cbbfbf;
+    padding: 30px;
+    background: powderblue;
+}
+.comment_content{
+    width: 100%;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-radius: 5px;
+
+}
+.comment_name{
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-color: grey;
+    margin-bottom: 20px ;
+    border-radius: 3px;
+}
+
+
 .pro_img {
     height: 277px;
     width: 205px;
@@ -306,6 +384,9 @@ ul {
     margin: 0;
     padding: 0;
 }
+.sellchay1 {
+    padding-top: 90px;
+    }
 .footer-top-first {
     background: #e8e8e8f7;
 }
@@ -1506,7 +1587,9 @@ a.price-mar {
     background: #f5eee9;
     border-radius: 27px;
 }
-
+.quangcao{
+    padding-top: 50px;
+}
 h3.heading-tittle {
     color: #000;
     font-size: 32px;
@@ -1532,14 +1615,21 @@ span.item_price {
     font-size: 15px;
 }
 
-.product-sec1.product-sec2 {
+/*.product-sec1.product-sec2 {
     background: #F45C5D;
     background: url('../images/y1.jpg')no-repeat;
     position: relative;
     background-size: cover;
     height: 300px;
+}*/
+.wrap_1200{
+    width: 1110px;
+    margin: auto;
 }
-
+.hinh{
+    width: 1200px;
+    height: 354px;
+}
 h3.effect-bg {
     color: #350202b3;
     font-size: 45px;
@@ -2986,6 +3076,7 @@ div#testimonials h4.m-title {
     .carousel-item.item1 {
         min-height: 430px;
     }
+    
     h3.tittle-w3l {
         font-size: 36px;
     }
