--- a/public/web/css/bootstrap.css
+++ b/public/web/css/bootstrap.css
@@ -2494,7 +2494,7 @@ select.form-control-lg:not([size]):not([multiple]), .input-group-lg > select.for
 
 .btn:not(:disabled):not(.disabled) {
   cursor: pointer;
-  border-radius: 30px;
+  /* border-radius: 30px; */
 }
 
 .btn:not(:disabled):not(.disabled):active, .btn:not(:disabled):not(.disabled).active {
